--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <script src="body.js"></script>
     <script src="header.js"></script>
     <script src="homepage.js"></script>
+    <script src="latest_projects.js"></script>
 </body>
 </html>
