--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <script src="header.js"></script>
     <script src="homepage.js"></script>
     <script src="latest_projects.js"></script>
+    <script src="about_me.js"></script>
 </body>
 </html>
