--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
     <script src="homepage.js"></script>
     <script src="latest_projects.js"></script>
     <script src="about_me.js"></script>
+    <script src="contact.js"></script>
+    <script src="footer.js"></script>
 </body>
 </html>
